<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AudioTest</string>
    <string name="action_settings">Settings</string>

	<string name="mode_incall">In call</string>
	<string name="mode_normal">Normall</string>
	<string name="mode_incomm">In comm</string>
	
	<string name="play">►</string>
    <string name="stop">◼</string>
	
	<string name="route_earpiece">Earpiece</string>
	<string name="route_speaker">Speaker</string>
	<string name="route_start_bt">Start BT</string>
	<string name="route_sco">BT SCO</string>
	<string name="route_speaker_off">Speaker off</string>
	<string name="route_stop_bt">Stop BT</string>
	<string name="route_sco_off">BT SCO off</string>
	
	<string name="stream_default">Defaut (Music)</string>
	<string name="stream_notification">Notification</string>
	<string name="stream_voice">Voice call</string>
	<string name="stream_ring">Ring</string>
	
	<string name="use_16k">Use 16k</string>
	
</resources>
